dataset1235/2025-2/805158916/users/2689107057/executions/1584167357_593159971.log
== RUN (2025-08-27 14:42:28)
-- CODE: 
nota1 = float(input("primeiro numero" ))
nota2 = float(input("segundo numero" ))
nota3 = float(input("terceiro numero"))
media = (nota1 + nota2 + nota3) / 3
print(media)
n1 = float(input("primeiro numero: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: ''
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:42:53)
-- CODE: 
nota1 = float(input("primeiro numero" ))
nota2 = float(input("segundo numero" ))
nota3 = float(input("terceiro numero"))
media = (nota1 + nota2 + nota3) / 3
print(media)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
primeiro numerosegundo numeroterceiro numero6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
primeiro numerosegundo numeroterceiro numero8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
primeiro numerosegundo numeroterceiro numero5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
primeiro numerosegundo numeroterceiro numero2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
primeiro numerosegundo numeroterceiro numero9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
primeiro numerosegundo numeroterceiro numero3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:36:19)
-- CODE: 
nota1 = float(input("primeiro numero: "))
nota2 = float(input("segundo numero: "))
nota3 = float(input("terceiro numero: "))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:39:52)
-- CODE: 
nota1 = float(input("primeiro numero: "))
nota2 = float(input("segundo numero: "))
nota3 = float(input("terceiro numero: "))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:35:43)
-- CODE: 
nota1 = float(input("primeiro numero: ")
nota2 = float(input("segundo numero: "))
nota3 = float(input("terceiro numero: '))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 3
    nota3 = float(input("terceiro numero: '))
                        ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 3
    nota3 = float(input("terceiro numero: '))
                        ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 3
    nota3 = float(input("terceiro numero: '))
                        ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 3
    nota3 = float(input("terceiro numero: '))
                        ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 3
    nota3 = float(input("terceiro numero: '))
                        ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 3
    nota3 = float(input("terceiro numero: '))
                        ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:42:35)
-- CODE: 
nota1 = float(input("primeiro numero" ))
nota2 = float(input("segundo numero" ))
nota3 = float(input("terceiro numero"))
media = (nota1 + nota2 + nota3) / 3
print(media)
n1 = float(input("primeiro numero: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: ''
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    n1 = float(input("primeiro numero: "))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: ''
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:35:52)
-- CODE: 
nota1 = float(input("primeiro numero: ")
nota2 = float(input("segundo numero: "))
nota3 = float(input("terceiro numero: "))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("primeiro numero: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("primeiro numero: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("primeiro numero: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("primeiro numero: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("primeiro numero: ")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 1
    nota1 = float(input("primeiro numero: ")
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:41:57)
-- CODE: 
nota1 = float(input("primeiro numero" ))
nota2 = float(input("segundo numero" ))
nota3 = float(input("terceiro numero"))
media = (nota1 + nota2 + notas3) / 3
print(media)
n1 = float(input("primeiro numero: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
